--- a/commerce/vercel.json
+++ b/commerce/vercel.json
@@ -1,14 +1,30 @@
 {
+    "version": 2,
     "builds": [
       {
         "src": "auctions/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {
+            "runtime": "Python3.9"
+        }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+            "distDir": "staticfiles_build"
+        }
       }
     ],
     "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
       {
         "src": "/(.*)",
         "dest": "auctions/wsgi.py"
       }
     ]
-}
+  }
+  
